Добавлен код ошибки 404 при не нахождении пользователя или книги по id; Починен update; Добавлена пагинация
